[gd_scene load_steps=21 format=3 uid="uid://bwu1yeiouy6e5"]

[ext_resource type="Script" path="res://scenes/ball/ball.gd" id="1_0ups8"]
[ext_resource type="MeshLibrary" uid="uid://cw8k6l61owcew" path="res://assets/models/blocks.meshlib" id="1_k1k77"]
[ext_resource type="Texture2D" uid="uid://7qxncaipyg7c" path="res://assets/textures/pixar-ball.png" id="2_ybtkt"]
[ext_resource type="ArrayMesh" uid="uid://dpt7sb5f21rha" path="res://assets/models/pixar-ball.obj" id="3_0ibo2"]
[ext_resource type="PackedScene" uid="uid://ci1tqd8q37feu" path="res://scenes/powerups/up1/power_up_01.tscn" id="3_7htj0"]
[ext_resource type="PackedScene" uid="uid://bpiwsrsssxecl" path="res://scenes/target_point/target_point.tscn" id="4_0afh8"]
[ext_resource type="Script" path="res://scenes/ball/states/movement_state_machine.gd" id="4_gytcu"]
[ext_resource type="Script" path="res://ui/ui_controller.gd.gd" id="5_7fsae"]
[ext_resource type="Script" path="res://scenes/ball/states/idle_state.gd" id="5_bofp0"]
[ext_resource type="PackedScene" uid="uid://c35ij4gtudi5h" path="res://scenes/portal.tscn" id="6_fkik1"]
[ext_resource type="Script" path="res://scenes/ball/states/rolling_state.gd" id="6_r0ur8"]
[ext_resource type="Script" path="res://scenes/ball/states/falling_state.gd" id="7_8wffg"]
[ext_resource type="MeshLibrary" uid="uid://dvsf4u3ggsp22" path="res://assets/masontry_kit_01.meshlib" id="7_h3cgq"]
[ext_resource type="Script" path="res://scenes/ball/states/long_falling_state.gd" id="8_nebnv"]
[ext_resource type="Script" path="res://scenes/ball/states/jumping_state.gd" id="9_rp6fg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1k17b"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jwako"]
albedo_texture = ExtResource("2_ybtkt")
roughness = 0.4

[sub_resource type="Theme" id="Theme_s32su"]
default_font_size = 24

[sub_resource type="Environment" id="Environment_q8qqc"]
background_mode = 1
background_color = Color(0.509804, 0.592157, 0.992157, 1)
ambient_light_color = Color(0.403922, 0.498039, 0.85098, 1)
tonemap_mode = 3
fog_enabled = true
fog_light_color = Color(0.47451, 0.517647, 0.843137, 1)
adjustment_enabled = true
adjustment_brightness = 0.75
adjustment_contrast = 1.5
adjustment_saturation = 1.2

[sub_resource type="BoxShape3D" id="BoxShape3D_25q1d"]
size = Vector3(343.904, 1, 263.884)

[node name="Main" type="Node3D"]

[node name="Ball" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75226, 2.96118)
script = ExtResource("1_0ups8")
max_camera_rotation_speed = 3.055
rolling_force = 60.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
shape = SubResource("SphereShape3D_1k17b")

[node name="Model" type="MeshInstance3D" parent="Ball"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_jwako")
mesh = ExtResource("3_0ibo2")

[node name="CameraRig" type="Marker3D" parent="Ball"]

[node name="Camera3D" type="Camera3D" parent="Ball/CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2.85, 3.5)
current = true

[node name="FloorCheck" type="RayCast3D" parent="Ball"]
target_position = Vector3(0, -3, 0)

[node name="Orientation" type="RayCast3D" parent="Ball"]
target_position = Vector3(0, 0, -12)

[node name="MovementStateMachine" type="Node" parent="Ball" node_paths=PackedStringArray("current_state")]
script = ExtResource("4_gytcu")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Ball/MovementStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("5_bofp0")
agent = NodePath("../..")

[node name="Falling" type="Node" parent="Ball/MovementStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("7_8wffg")
agent = NodePath("../..")

[node name="LongFalling" type="Node" parent="Ball/MovementStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("8_nebnv")
agent = NodePath("../..")

[node name="Jumping" type="Node" parent="Ball/MovementStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("9_rp6fg")
agent = NodePath("../..")

[node name="Rolling" type="Node" parent="Ball/MovementStateMachine" node_paths=PackedStringArray("agent")]
script = ExtResource("6_r0ur8")
agent = NodePath("../..")

[node name="UI" type="Container" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("5_7fsae")

[node name="Score" type="Label" parent="UI"]
layout_mode = 2
theme = SubResource("Theme_s32su")
text = "100"

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
clip_contents = true
custom_minimum_size = Vector2(0.415, 0)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="UI/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Camera2" type="Camera3D" parent="UI/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.514305, -0.385487, 0.766088, 3.55642e-09, 0.893285, 0.449491, -0.857607, 0.231175, -0.459421, -25.8573, 6.89519, 39.7)
current = true

[node name="World" type="Node" parent="."]

[node name="LevelBlocks" type="GridMap" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)
mesh_library = ExtResource("1_k1k77")
cell_size = Vector3(4, 2, 4)
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PackedInt32Array(0, 65535, 0, 0, 0, 3, 65535, 0, 0, 65535, 65535, 1, 1, 0, 3, 1, 65535, 2, 0, 65534, 2, 65535, 65534, 1, 65534, 65535, 1, 65534, 0, 1, 65534, 1, 1, 65534, 2, 1, 65534, 3, 0, 65535, 1, 0, 1, 2, 0, 1, 1, 0, 0, 1, 0, 65535, 2, 0, 0, 2, 0, 0, 3, 0, 1, 3, 0, 65535, 3, 0, 65533, 3, 655361, 65533, 4, 655362, 65534, 4, 1441793, 65535, 4, 0, 1, 4, 1441793, 0, 4, 1441793, 65534, 65534, 2, 2, 0, 2, 2, 1, 1, 2, 2, 1, 2, 3, 1, 2, 4, 1441794, 65533, 65534, 1048578, 65533, 65535, 1441792, 65533, 0, 655361, 65533, 1, 655361, 65533, 2, 655361, 65533, 6, 0, 2, 6, 0, 1, 6, 0, 0, 6, 0, 65535, 6, 0, 65534, 6, 0, 196605, 8, 0, 196604, 8, 0, 196603, 8, 0, 196603, 9, 1, 196604, 9, 1441793, 196605, 9, 1441794, 196602, 8, 0, 196602, 9, 0, 196601, 8, 0, 196601, 9, 0, 196601, 10, 1441792, 196601, 11, 0, 196601, 12, 1441793, 196602, 12, 1441794, 196602, 11, 1, 196602, 10, 1441792, 65532, 0, 1048577, 65532, 65535, 1441792, 65532, 65534, 655362, 196600, 11, 655365, 196600, 10, 1048577, 196600, 12, 1441793, 196599, 12, 655362, 196599, 11, 655361, 196599, 10, 1048578, 196603, 10, 1, 196600, 9, 1, 196600, 8, 1, 196603, 11, 1441794, 131071, 8, 0, 131071, 9, 0, 131071, 10, 0, 131070, 10, 0, 131070, 11, 0, 131071, 11, 0, 131069, 12, 0, 131070, 12, 0, 131071, 12, 0, 131070, 13, 0, 131071, 13, 0, 131069, 13, 0, 131070, 8, 3)
}
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World"]
transform = Transform3D(0.5, -0.75, 0.433013, -0.864898, -0.406943, 0.293852, -0.0441771, -0.521438, -0.852145, 0, 10.9224, 4.82911)
light_color = Color(0.917647, 0.784314, 0.690196, 1)
light_energy = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_q8qqc")

[node name="DeathPit" type="Area3D" parent="World"]

[node name="DeathCollider" type="CollisionShape3D" parent="World/DeathPit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.7839, -13.496, 69.5131)
shape = SubResource("BoxShape3D_25q1d")

[node name="Pickups" type="Node" parent="World"]

[node name="PowerUp01" parent="World/Pickups" instance=ExtResource("3_7htj0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 6)

[node name="PowerUp02" parent="World/Pickups" instance=ExtResource("3_7htj0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 12)

[node name="Nasties" type="Node" parent="World"]

[node name="TargetPoint" parent="World" instance=ExtResource("4_0afh8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 7, 46)
next_point = "res://scenes/levels/level_02.tscn"

[node name="portal" parent="World" instance=ExtResource("6_fkik1")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 2, 2, 12)

[node name="MasonryGrid" type="GridMap" parent="World"]
mesh_library = ExtResource("7_h3cgq")
cell_size = Vector3(4, 2, 4)
data = {
"cells": PackedInt32Array(-5, 65535, 1048579, -6, 65535, 4, -7, 65535, 4, -8, 65535, 4, -9, 65535, 4, -10, 65535, 4, -11, 65535, 1048576, -11, 0, 1048580, -11, 1, 1048580, -11, 2, 1048580, -11, 3, 1048580, -11, 4, 655360, -10, 4, 655364, -9, 4, 655364, -8, 4, 655364, -7, 4, 1, -7, 3, 1441793, -7, 2, 1441793, -7, 1, 1048576, -6, 2, 1048578, -6, 1, 655361, -5, 1, 0, -5, 2, 1048577, -5, 3, 1048577, -6, 3, 1048578, -6, 4, 1, -5, 4, 1048577, -5, 5, 1048580, -5, 6, 1048580, -5, 7, 1048580)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[connection signal="body_entered" from="World/DeathPit" to="Ball" method="_on_death_pit_body_entered"]
